Update all PanSTARRS to v2 except ELAIS-N1,CDFS-SWIRE and COSMOS

--- a/dmu1/dmu1_ml_Bootes/1_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1_Reformatting.ipynb
@@ -6,60 +6,42 @@
    "source": [
     "# HELP - Bootes Master List Creation\n",
     "\n",
-    "This notebook presents the creation of the HELP master list on the Bootes field. This field has already been ingested into HeDAM based on Eduardo's masterlist. Ken said that Michael Brown has a precompiled masterlist for the Bootes field and therefore this notebook will probably only involve mild reformatting of that if we can get it. Ken will therefore include all the necessary code here.\n",
+    "This notebook presents the creation of the HELP master list on the Bootes field. This field was originally ingested into HeDAM based on a masterlist produced by Eduardo Gonzales-Solares. Ken Duncan subsequently retrieved Michael Brown's precompiled masterlist for the Bootes field and therefore this notebook only contains some simple naming changes and astrometry correction. The original catalogue is described in DMU_0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from herschelhelp_internal import git_version\n",
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "#%config InlineBackend.figure_format = 'svg'\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.rc('figure', figsize=(10, 6))\n",
     "\n",
+    "from collections import OrderedDict\n",
+    "import os\n",
     "\n",
-    "<table>\n",
-    "  <tr>\n",
-    "    <th>Survey/Telescope/Instrument</th>\n",
-    "    <th>Filters</th>\n",
-    "    <th>Location</th>\n",
-    "    <th>Notes</th>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>PS1 3PS/Pan-STARRS1</td>\n",
-    "    <td>grizy</td>\n",
-    "    <td></td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>LBT Bootes/LBT/LBC</td>\n",
-    "    <td>U,Y</td>\n",
-    "    <td></td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>NDWFS</td>\n",
-    "    <td>B,R,I,K</td>\n",
-    "    <td>dmu0_NDWFS</td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>zBootes</td>\n",
-    "    <td>z</td>\n",
-    "    <td>dmu0_zBootes</td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>z-band Bootes/Subaru</td>\n",
-    "    <td>z</td>\n",
-    "    <td></td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>IBIS</td>\n",
-    "    <td>J,H,K</td>\n",
-    "    <td>dmu0_IBIS</td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>SDWFS/Spitzer/IRAC</td>\n",
-    "    <td>IRAC1234</td>\n",
-    "    <td>dmu0_SDWFS</td>\n",
-    "    <td></td>\n",
-    "  </tr>\n",
-    "</table>"
+    "from astropy import units as u\n",
+    "from astropy.coordinates import SkyCoord\n",
+    "from astropy.table import Column, Table\n",
+    "import numpy as np\n",
+    "\n",
+    "from herschelhelp_internal.flagging import  gaia_flag_column\n",
+    "from herschelhelp_internal.masterlist import nb_astcor_diag_plot, remove_duplicates\n",
+    "from herschelhelp_internal.utils import astrometric_correction, mag_to_flux"
    ]
   },
   {
@@ -70,8 +52,258 @@
    },
    "outputs": [],
    "source": [
-    "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
+    "try:\n",
+    "    os.makedirs(OUT_DIR)\n",
+    "except FileExistsError:\n",
+    "    pass\n",
+    "\n",
+    "RA_COL = \"bootes_ra\"\n",
+    "DEC_COL = \"botes_dec\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## I - Column selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imported_columns = OrderedDict({\n",
+    "        \"objID\": \"ps1_id\",\n",
+    "        \"raMean\": \"ps1_ra\",\n",
+    "        \"decMean\": \"ps1_dec\",\n",
+    "        \"gApMag\": \"m_ap_gpc1_g\",\n",
+    "        \"gApMagErr\": \"merr_ap_gpc1_g\",\n",
+    "        \"gKronMag\": \"m_gpc1_g\",\n",
+    "        \"gKronMagErr\": \"merr_gpc1_g\",\n",
+    "        \"rApMag\": \"m_ap_gpc1_r\",\n",
+    "        \"rApMagErr\": \"merr_ap_gpc1_r\",\n",
+    "        \"rKronMag\": \"m_gpc1_r\",\n",
+    "        \"rKronMagErr\": \"merr_gpc1_r\",\n",
+    "        \"iApMag\": \"m_ap_gpc1_i\",\n",
+    "        \"iApMagErr\": \"merr_ap_gpc1_i\",\n",
+    "        \"iKronMag\": \"m_gpc1_i\",\n",
+    "        \"iKronMagErr\": \"merr_gpc1_i\",\n",
+    "        \"zApMag\": \"m_ap_gpc1_z\",\n",
+    "        \"zApMagErr\": \"merr_ap_gpc1_z\",\n",
+    "        \"zKronMag\": \"m_gpc1_z\",\n",
+    "        \"zKronMagErr\": \"merr_gpc1_z\",\n",
+    "        \"yApMag\": \"m_ap_gpc1_y\",\n",
+    "        \"yApMagErr\": \"merr_ap_gpc1_y\",\n",
+    "        \"yKronMag\": \"m_gpc1_y\",\n",
+    "        \"yKronMagErr\": \"merr_gpc1_y\"\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "catalogue = Table.read(\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_XMM-LSS.fits\")[list(imported_columns)]\n",
+    "for column in imported_columns:\n",
+    "    catalogue[column].name = imported_columns[column]\n",
+    "\n",
+    "epoch = 2012\n",
+    "\n",
+    "# Clean table metadata\n",
+    "catalogue.meta = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Adding flux and band-flag columns\n",
+    "for col in catalogue.colnames:\n",
+    "    if col.startswith('m_'):\n",
+    "        \n",
+    "        errcol = \"merr{}\".format(col[1:])\n",
+    "        \n",
+    "        # -999 is used for missing values\n",
+    "        catalogue[col][catalogue[col] < -900] = np.nan\n",
+    "        catalogue[errcol][catalogue[errcol] < -900] = np.nan     \n",
+    "        \n",
+    "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
+    "        \n",
+    "        # Fluxes are added in µJy\n",
+    "        catalogue.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
+    "        catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
+    "        \n",
+    "        # Band-flag column\n",
+    "        if \"ap\" not in col:\n",
+    "            catalogue.add_column(Column(np.zeros(len(catalogue), dtype=bool), name=\"flag{}\".format(col[1:])))\n",
+    "        \n",
+    "# TODO: Set to True the flag columns for fluxes that should not be used for SED fitting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalogue[:10].show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II - Removal of duplicated sources"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We remove duplicated objects from the input catalogues."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SORT_COLS = ['merr_ap_gpc1_r', 'merr_ap_gpc1_g', 'merr_ap_gpc1_i', 'merr_ap_gpc1_z', 'merr_ap_gpc1_y']\n",
+    "FLAG_NAME = 'ps1_flag_cleaned'\n",
+    "\n",
+    "nb_orig_sources = len(catalogue)\n",
+    "\n",
+    "catalogue = remove_duplicates(catalogue, RA_COL, DEC_COL,  sort_col=SORT_COLS, flag_name=FLAG_NAME)\n",
+    "\n",
+    "nb_sources = len(catalogue)\n",
+    "\n",
+    "print(\"The initial catalogue had {} sources.\".format(nb_orig_sources))\n",
+    "print(\"The cleaned catalogue has {} sources ({} removed).\".format(nb_sources, nb_orig_sources - nb_sources))\n",
+    "print(\"The cleaned catalogue has {} sources flagged as having been cleaned\".format(np.sum(catalogue[FLAG_NAME])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III - Astrometry correction\n",
+    "\n",
+    "We match the astrometry to the Gaia one. We limit the Gaia catalogue to sources with a g band flux between the 30th and the 70th percentile. Some quick tests show that this give the lower dispersion in the results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_XMM-LSS.fits\")\n",
+    "gaia_coords = SkyCoord(gaia['ra'], gaia['dec'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
+    "                    gaia_coords.ra, gaia_coords.dec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta_ra, delta_dec =  astrometric_correction(\n",
+    "    SkyCoord(catalogue[RA_COL], catalogue[DEC_COL]),\n",
+    "    gaia_coords\n",
+    ")\n",
+    "\n",
+    "print(\"RA correction: {}\".format(delta_ra))\n",
+    "print(\"Dec correction: {}\".format(delta_dec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "catalogue[RA_COL] +=  delta_ra.to(u.deg)\n",
+    "catalogue[DEC_COL] += delta_dec.to(u.deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
+    "                    gaia_coords.ra, gaia_coords.dec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IV - Flagging Gaia objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "catalogue.add_column(\n",
+    "    gaia_flag_column(SkyCoord(catalogue[RA_COL], catalogue[DEC_COL]), epoch, gaia)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GAIA_FLAG_NAME = \"ps1_flag_gaia\"\n",
+    "\n",
+    "catalogue['flag_gaia'].name = GAIA_FLAG_NAME\n",
+    "print(\"{} sources flagged.\".format(np.sum(catalogue[GAIA_FLAG_NAME] > 0)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# V - Saving to disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "catalogue.write(\"{}/PS1.fits\".format(OUT_DIR), overwrite=True)"
    ]
   }
  ],
