Low memory merging on XMM-LSS
On XMM-LSS #4 we have a memory issue. I am trying to perform the merge without the photometry and then add the photometry at the end. If this works we will probably have to have separate merging notebooks for the surveys with overlapping bands which include the choices i.e. merge uds and dxs in to a single UKIDSS table before the final merge. If the merge works with all columsn apart from those starting with f_, feer_, m_, or merr_ this method should work.

--- a/dmu1/dmu1_ml_Bootes/1_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1_Reformatting.ipynb
@@ -81,34 +81,16 @@
     "        \"objID\": \"ps1_id\",\n",
     "        \"raMean\": \"ps1_ra\",\n",
     "        \"decMean\": \"ps1_dec\",\n",
-    "        \"gApMag\": \"m_ap_gpc1_g\",\n",
-    "        \"gApMagErr\": \"merr_ap_gpc1_g\",\n",
-    "        \"gKronMag\": \"m_gpc1_g\",\n",
-    "        \"gKronMagErr\": \"merr_gpc1_g\",\n",
-    "        \"rApMag\": \"m_ap_gpc1_r\",\n",
-    "        \"rApMagErr\": \"merr_ap_gpc1_r\",\n",
-    "        \"rKronMag\": \"m_gpc1_r\",\n",
-    "        \"rKronMagErr\": \"merr_gpc1_r\",\n",
-    "        \"iApMag\": \"m_ap_gpc1_i\",\n",
-    "        \"iApMagErr\": \"merr_ap_gpc1_i\",\n",
-    "        \"iKronMag\": \"m_gpc1_i\",\n",
-    "        \"iKronMagErr\": \"merr_gpc1_i\",\n",
-    "        \"zApMag\": \"m_ap_gpc1_z\",\n",
-    "        \"zApMagErr\": \"merr_ap_gpc1_z\",\n",
-    "        \"zKronMag\": \"m_gpc1_z\",\n",
-    "        \"zKronMagErr\": \"merr_gpc1_z\",\n",
-    "        \"yApMag\": \"m_ap_gpc1_y\",\n",
-    "        \"yApMagErr\": \"merr_ap_gpc1_y\",\n",
-    "        \"yKronMag\": \"m_gpc1_y\",\n",
-    "        \"yKronMagErr\": \"merr_gpc1_y\"\n",
+    "\n",
     "    })\n",
     "\n",
     "\n",
-    "catalogue = Table.read(\"../../dmu0/dmu0_PanSTARRS1-3SS/data/PanSTARRS1-3SS_XMM-LSS.fits\")[list(imported_columns)]\n",
-    "for column in imported_columns:\n",
-    "    catalogue[column].name = imported_columns[column]\n",
+    "i_catalogue = Table.read(\"../../dmu0/dmu0_Bootes_Brown/data/Bootes_merged_Icorr_2014a_all_ap2_07112017.fits\") #[list(imported_columns)]\n",
+    "irac_i2_catalogue = Table.read(\"../../dmu0/dmu0_Bootes_Brown/data/bootes_merged_ch2corr_2014a_all_ap2_07112017.fits\")\n",
+    "#for column in imported_columns:\n",
+    "#    catalogue[column].name = imported_columns[column]\n",
     "\n",
-    "epoch = 2012\n",
+    "#epoch = 2012\n",
     "\n",
     "# Clean table metadata\n",
     "catalogue.meta = None"
