HS82 running on test degree to merge
Perhaps it will run on Vulcain without changes now. 30Gb decals will reduce to 5 gb after processing and not as many surveys as xmm-lss. Yannick noticed major error in DECals - needs aperture correction and band names changing inline with Legacy survey on #2, #3, #4, #5, #7, #8, #15 and #16

--- a/dmu1/dmu1_ml_Bootes/1_Reformatting.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1_Reformatting.ipynb
@@ -69,8 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUT_DIR =  os.environ.get('TMP_DIR', \"./data_tmp\")\n",
-    "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
+    "TMP_DIR = os.environ.get('TMP_DIR', \"./data_tmp\")\n",
+    "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
     "except FileExistsError:\n",
@@ -95,12 +95,12 @@
    },
    "outputs": [],
    "source": [
-    "imported_columns = OrderedDict({\n",
-    "        \"objID\": \"ps1_id\",\n",
-    "        \"raMean\": \"ps1_ra\",\n",
-    "        \"decMean\": \"ps1_dec\",\n",
-    "\n",
-    "    })\n",
+    "#imported_columns = OrderedDict({\n",
+    "#        \"objID\": \"ps1_id\",\n",
+    "#        \"raMean\": \"ps1_ra\",\n",
+    "#        \"decMean\": \"ps1_dec\",\n",
+    "#\n",
+    "#    })\n",
     "\n",
     "\n",
     "i_catalogue = Table.read(\"../../dmu0/dmu0_Bootes_Brown/data/Bootes_merged_Icorr_2014a_all_ap2_07112017.fits\") #[list(imported_columns)]\n",
