--- a/dmu1/dmu1_ml_NGP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_NGP/2_Merging.ipynb
@@ -533,7 +533,7 @@
    "source": [
     "## VIII.a Wavelength domain coverage\n",
     "\n",
-    "We add a binary `flag_optnir_obs` indicating that a source was observed in a given wavelenght domain:\n",
+    "We add a binary `flag_optnir_obs` indicating that a source was observed in a given wavelength domain:\n",
     "\n",
     "- 1 for observation in optical;\n",
     "- 2 for observation in near-infrared;\n",
@@ -603,9 +603,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VIII.b Wavelenght domain detection\n",
+    "## VIII.b Wavelength domain detection\n",
     "\n",
-    "We add a binary `flag_optnir_det` indicating that a source was detected in a given wavelenght domain:\n",
+    "We add a binary `flag_optnir_det` indicating that a source was detected in a given wavelength domain:\n",
     "\n",
     "- 1 for detection in optical;\n",
     "- 2 for detection in near-infrared;\n",
