Fixing DECaLS on HS82
adding aperture correction and shifting bands on HS82 #15

--- a/dmu1/dmu1_ml_HDF-N/1.3_Hawaii-HDFN.ipynb
+++ b/dmu1/dmu1_ml_HDF-N/1.3_Hawaii-HDFN.ipynb
@@ -21,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -31,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -87,29 +91,20 @@
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
-    "        'ID': \"candels_id\",\n",
-    "        'RAJ2000': \"candels_ra\",\n",
-    "        'DEJ2000': \"candels_dec\",\n",
+    "        'ID': \"hawaii_id\",\n",
+    "        'RAJ2000': \"hawaii_ra\",\n",
+    "        'DEJ2000': \"hawaii_dec\",\n",
     "        'S/G':  \"candels_stellarity\",\n",
     "        'F140Wap': \"f_ap_candels_f140w\",\n",
     "        'e_F140Wap': \"ferr_ap_candels_f140w\",\n",
     "        'F140W': \"f_candels_f140w\",\n",
     "        'e_F140W': \"ferr_candels_f140w\",\n",
-    "        'F160Wap': \"f_ap_candels_f160w\",\n",
-    "        'e_F160Wap': \"ferr_ap_candels_f160w\",\n",
-    "        'F160W': \"f_candels_f160w\",\n",
-    "        'e_F160W': \"ferr_candels_f160w\",\n",
-    "        'F606W': \"f_candels_f606w\",\n",
-    "        'e_F606W': \"ferr_candels_f606w\",\n",
-    "        'F814W': \"f_candels_f814w\",\n",
-    "        'e_F814W': \"ferr_candels_f814w\",\n",
-    "        'F125W': \"f_candels_f125w\",\n",
-    "        'e_F125W': \"ferr_candels_f125w\"\n",
+    "\n",
     "\n",
     "    })\n",
     "\n",
     "\n",
-    "catalogue = Table.read(\"../../dmu0/dmu0_CANDELS-3D-HST/data/CANDELS-3D-HST_XMM-LSS.fits\")[list(imported_columns)]\n",
+    "catalogue = Table.read(\"../../dmu0/dmu0_Hawaii-HDFN/data/R.fits.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
     "    catalogue[column].name = imported_columns[column]\n",
     "\n",
@@ -122,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding flux and band-flag columns\n",
@@ -166,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[:10].show_in_notebook()"
@@ -189,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -235,7 +236,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
@@ -245,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
@@ -272,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
@@ -302,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GAIA_FLAG_NAME = \"candels_flag_gaia\"\n",
