--- a/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
+++ b/dmu1/dmu1_ml_SA13/1.1_LegacySurvey.ipynb
@@ -179,6 +179,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(magnitudes['g'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[         nan,  27.27029708,  25.2863477 , ...,  25.63380443,\n",
+       "         25.96228241,  25.19478113],\n",
+       "       [         nan,  26.66817685,  25.13723918, ...,  24.75301796,\n",
+       "         25.0828956 ,  24.8186376 ],\n",
+       "       [         nan,  25.79887154,  25.54431579, ...,  24.37687909,\n",
+       "         24.57057394,  24.45939483],\n",
+       "       ..., \n",
+       "       [         nan,          nan,          nan, ...,  23.25061604,\n",
+       "         23.94751419,  23.56966437],\n",
+       "       [ 23.52432697,          nan,          nan, ...,  23.17470441,\n",
+       "         23.44228694,  23.45916539],\n",
+       "       [ 23.49245771,  25.86144971,          nan, ...,  22.67763172,\n",
+       "                 nan,  23.7231443 ]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "magnitudes['g']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
