HS82 now running - ready to test memory on Vulcain
Perhaps DECALS will be too big to run #15

--- a/dmu1/dmu1_ml_GAMA-09/1.3_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_GAMA-09/1.3_DECaLS.ipynb
@@ -96,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Pritine LS catalogue\n",
@@ -890,7 +892,7 @@
     "for col in catalogue.colnames:\n",
     "    catalogue[col].unit = None\n",
     "    \n",
-    "catalogue.add_column(Column(data=stellarities['g'], name=\"stellarity\")) #Stelarites computed earlier"
+    "catalogue.add_column(Column(data=stellarities['g'], name=\"decals_stellarity\")) #Stelarites computed earlier"
    ]
   },
   {
