--- a/dmu1/dmu1_ml_GAMA-15/1.1_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_GAMA-15/1.1_DECaLS.ipynb
@@ -354,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Aperture correction\n",
@@ -453,7 +455,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Aperture correction\n",
@@ -897,7 +901,7 @@
     "for col in catalogue.colnames:\n",
     "    catalogue[col].unit = None\n",
     "    \n",
-    "catalogue.add_column(Column(data=stellarities['g'], name=\"stellarity\")) #Stelarites computed earlier"
+    "catalogue.add_column(Column(data=stellarities['g'], name=\"decals_stellarity\")) #Stelarites computed earlier"
    ]
   },
   {
