--- a/dmu1/dmu1_ml_XMM-LSS/1.6_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.6_DECaLS.ipynb
@@ -883,7 +883,7 @@
     "for col in catalogue.colnames:\n",
     "    catalogue[col].unit = None\n",
     "    \n",
-    "catalogue.add_column(Column(data=stellarities['g'], name=\"stellarity\")) #Stelarites computed earlier"
+    "catalogue.add_column(Column(data=stellarities['g'], name=\"decals_stellarity\")) #Stelarites computed earlier"
    ]
   },
   {
