[dmu1_ml_XMM-LSS] Try to save the file by millions
As the memory problem on XMM-LSS arises when we save the masterlist at
the end of the merging notebook, we try to save several files of one
million sources.

Relate to #4

--- a/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/2_Merging.ipynb
@@ -3106,7 +3106,29 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue[columns].write(\"{}/master_catalogue_xmm-lss{}.fits\".format(OUT_DIR, SUFFIX))"
+    "#master_catalogue[columns].write(\"{}/master_catalogue_xmm-lss{}.fits\".format(OUT_DIR, SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Saving the master catalogue to a file uses to much memory because the masterlist has a lot of sources and a lot of columns. To deal with this problem, we save the catalogue into separated catalogues of 1 million sources that will be merged afterwards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Beware in the number or sources is a round million, the last source may be lost.\n",
+    "top_million_nb = int(np.ceil(len(master_catalogue)/1.e6))\n",
+    "for part_nb, m_boundaries in enumerate(zip(np.arange(top_million_nb), 1 + np.arange(top_million_nb))):\n",
+    "    low_idx = m_boundaries[0] * 1000000\n",
+    "    high_idx = m_boundaries[1] * 1000000\n",
+    "    master_catalogue[columns][low_idx:high_idx].write(\n",
+    "        \"{}/master_catalogue_xmm-lss{}_part{}.csv\".format(OUT_DIR, SUFFIX,part_nb), format=\"ascii.csv\")"
    ]
   }
  ],
