Added quick checks on all fields
Still a few fields miss the reporting of masterlist used #1, #2, #3, #4, #5, #6, #7, #8, #9, #10, #11, #12, #13, #14, #15, #16, #17, #18, #19, #20, #21, #22, #23

--- a/dmu1/dmu1_ml_AKARI-NEP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/3_Checks_and_diagnostics.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -56,7 +58,7 @@
     "import numpy as np\n",
     "from matplotlib_venn import venn3, venn2\n",
     "\n",
-    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, find_last_ml_suffix"
+    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, find_last_ml_suffix, quick_checks"
    ]
   },
   {
@@ -81,6 +83,24 @@
     "master_catalogue = Table.read(\"{}/{}\".format(OUT_DIR, master_catalogue_filename))\n",
     "\n",
     "print(\"Diagnostics done using: {}\".format(master_catalogue_filename))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0 - Quick checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "quick_checks(master_catalogue).show_in_notebook()"
    ]
   },
   {
