--- a/dmu1/dmu1_ml_SSDF/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SSDF/3_Checks_and_diagnostics.ipynb
@@ -101,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "quick_checks(master_catalogue)"
+    "quick_checks(master_catalogue).show_in_notebook()"
    ]
   },
   {
@@ -576,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
