--- a/dmu1/dmu1_ml_AKARI-SEP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/3_Checks_and_diagnostics.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -56,7 +58,7 @@
     "import numpy as np\n",
     "from matplotlib_venn import venn3, venn2\n",
     "\n",
-    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, find_last_ml_suffix"
+    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, find_last_ml_suffix, quick_checks"
    ]
   },
   {
@@ -81,6 +83,28 @@
     "master_catalogue = Table.read(\"{}/{}\".format(OUT_DIR, master_catalogue_filename))\n",
     "\n",
     "print(\"Diagnostics done using: {}\".format(master_catalogue_filename))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# 0 - Quick checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "quick_checks(master_catalogue).show_in_notebook()"
    ]
   },
   {
@@ -300,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "twomass = Table.read(\"../../dmu0/dmu0_2MASS-point-sources/data/2MASS-PSC_AKARI-SEP.fits\")\n",
