--- a/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/3_Checks_and_diagnostics.ipynb
@@ -58,7 +58,7 @@
     "import numpy as np\n",
     "from matplotlib_venn import venn2\n",
     "\n",
-    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, find_last_ml_suffix"
+    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, find_last_ml_suffix, quick_checks"
    ]
   },
   {
@@ -85,6 +85,24 @@
     "master_catalogue = Table.read(\"{}/{}\".format(OUT_DIR, master_catalogue_filename))\n",
     "\n",
     "print(\"Diagnostics done using: {}\".format(master_catalogue_filename))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0 - Quick checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "quick_checks(master_catalogue).show_in_notebook()"
    ]
   },
   {
@@ -277,6 +295,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
