--- a/dmu1/dmu1_ml_NGP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_NGP/3_Checks_and_diagnostics.ipynb
@@ -65,13 +65,15 @@
     "import numpy as np\n",
     "from matplotlib_venn import venn3, venn2\n",
     "\n",
-    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms"
+    "from herschelhelp_internal.masterlist import nb_compare_mags, nb_ccplots, nb_histograms, quick_checks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
@@ -79,6 +81,24 @@
     "#SUFFIX = \"_20171103\"\n",
     "\n",
     "master_catalogue = Table.read(\"{}/master_catalogue_ngp{}.fits\".format(OUT_DIR, SUFFIX))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0 - Quick checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "quick_checks(master_catalogue).show_in_notebook()"
    ]
   },
   {
