--- a/dmu1/dmu1_ml_SPIRE-NEP/3_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_SPIRE-NEP/3_Checks_and_diagnostics.ipynb
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "quick_checks(master_catalogue)"
+    "quick_checks(master_catalogue).show_in_notebook()"
    ]
   },
   {
@@ -646,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
