Brute force hack to make DECaLS run on laptop and Vulcain
We take psf with and without a space to define a star just to get the code running across both machines #2 #3 #4 #7 #8 #15 #16

--- a/dmu1/dmu1_ml_COSMOS/1.3_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.3_DECaLS.ipynb
@@ -22,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -108,7 +112,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bands = [\"u\", \"g\", \"r\", \"i\", \"z\", \"y\"]\n",
@@ -133,6 +139,7 @@
     "    \n",
     "    stellarities[band] = np.full(len(orig_decals),0., dtype='float32')\n",
     "    stellarities[band][np.array( orig_decals[\"type\"]) == \"PSF \" ] = 1.\n",
+    "    stellarities[band][np.array( orig_decals[\"type\"]) == \"PSF\" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
@@ -155,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_ap_evol(magnitudes['u'], stellarities['u'], labels=apertures)"
@@ -171,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['u'][4], \n",
@@ -209,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_ap_evol(magnitudes['g'], stellarities['g'], labels=apertures)"
@@ -225,7 +238,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['g'][4], \n",
@@ -243,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Aperture correction\n",
@@ -268,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_ap_evol(magnitudes['r'], stellarities['r'], labels=apertures)"
@@ -284,7 +303,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['r'][4], \n",
@@ -302,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Aperture correction\n",
@@ -326,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_ap_evol(magnitudes['i'], stellarities['i'], labels=apertures)"
@@ -335,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['i'][4], \n",
@@ -373,7 +400,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_ap_evol(magnitudes['z'], stellarities['z'], labels=apertures)"
@@ -389,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['z'][4], \n",
@@ -434,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_ap_evol(magnitudes['y'], stellarities['y'], labels=apertures)"
@@ -443,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_plot_mag_vs_apcor(magnitudes['y'][4], \n",
@@ -582,7 +617,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "flux_to_mag_vect = np.vectorize(flux_to_mag)\n",
@@ -632,6 +669,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -656,7 +694,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "SORT_COLS = [#'merr_ap_decam_u',\n",
@@ -706,7 +746,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
@@ -716,7 +758,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "delta_ra, delta_dec =  astrometric_correction(\n",
@@ -745,7 +789,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nb_astcor_diag_plot(catalogue[RA_COL], catalogue[DEC_COL], \n",
@@ -775,7 +821,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "GAIA_FLAG_NAME = \"decals_flag_gaia\"\n",
