--- a/dmu1/dmu1_ml_XMM-LSS/1.6_DECaLS.ipynb
+++ b/dmu1/dmu1_ml_XMM-LSS/1.6_DECaLS.ipynb
@@ -164,6 +164,7 @@
     "    \n",
     "    stellarities[band] = np.full(len(orig_decals),0., dtype='float32')\n",
     "    stellarities[band][np.array( orig_decals[\"type\"]) == \"PSF \" ] = 1.\n",
+    "    stellarities[band][np.array( orig_decals[\"type\"]) == \"PSF\" ] = 1.\n",
     "    \n",
     "    # Some sources have an infinite magnitude\n",
     "    mask = np.isinf(magnitudes[band])\n",
